MDEV-35257 Backup fails during an ALTER TABLE with FULLTEXT INDEX

In commit 1c55b845e0fe337e647ba230288ed13e966cb7c7 (MDEV-32932) the
test mariabackup.innodb_ddl_on_intermediate_table was introduced but
disabled.

xb_load_single_table_tablespace(): Properly handle missing FTS_ tables.

backup_file_op_fail(): Properly handle FILE_DELETE records.